# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "gqe-cli"
description = "DataFusion Flight SQL example using Substrait as the intermediate plan format"
publish = false
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
default-run = "gqe-cli"

[dependencies]
arrow = { version = "57.3.0", features = ["prettyprint"] }
arrow-flight = { version = "57.3.0", features = ["flight-sql-experimental"] }
arrow-ipc = { version = "57.3.0" }
async-trait = "0.1.89"
bytes = "1.11"
clap = { version = "4", features = ["derive"] }
dashmap = "6.0.1"
datafusion = { version = "52.3.0", default-features = true }
datafusion-common-runtime = { version = "52.3.0" }
datafusion-substrait = { version = "52.3.0" }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
pbjson-types = "0.8"
prost = "0.14.1"
prost-types = "0.14"
substrait = { version = "0.62.2" }
tokio = { version = "1.48", features = ["rt-multi-thread", "parking_lot", "fs"] }
tonic = "0.14"
uuid = "1.21"

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
tempfile = "3"

[[bin]]
  name = "gqe-server"
  path = "src/bin/server.rs"
