[package]
name = "pg-server"
version = "0.1.0"
description = "A GQE frontend compatible with PostgreSQL clients"
authors = ["NVIDIA"]
edition = "2021"

license = "LicenseRef-NvidiaProprietary"
readme = "README.md"

homepage = "https://confluence.nvidia.com/pages/viewpage.action?spaceKey=DevtechCompute&title=GQE"
repository = "https://gitlab-master.nvidia.com/Devtech-Compute/gqe"

[dependencies]
async-trait = "~0.1"
async-walkdir = "~1.0"
clap = { version = "~4.4.7", features = ["derive"] }
clap-verbosity-flag = "~2.1"
log = "~0.4"
pgwire = "~0.19"
simplelog = "~0.12"
sqlparser = "~0.43"
tokio = { version = "~1.36", features = ["rt-multi-thread", "net", "macros"]}
tokio-stream = "~0.1"

[dependencies.gqe-rs]
path = "../gqe-rs"
