# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "pg-server"
version = "0.1.0"
description = "A GQE frontend compatible with PostgreSQL clients"
authors = ["NVIDIA"]
edition = "2025"

license = "Apache-2.0"
readme = "README.md"

homepage = "https://confluence.nvidia.com/pages/viewpage.action?spaceKey=DevtechCompute&title=GQE"
repository = "https://gitlab-master.nvidia.com/Devtech-Compute/gqe"

[dependencies]
async-trait = "~0.1"
async-walkdir = "~1.0"
clap = { version = "~4.4.7", features = ["derive"] }
clap-verbosity-flag = "~2.1"
log = "~0.4"
pgwire = "~0.19"
simplelog = "~0.12"
sqlparser = "~0.43"
tokio = { version = "~1.43", features = ["rt-multi-thread", "net", "macros"]}
tokio-stream = "~0.1"

[dependencies.gqe-rs]
path = "../gqe-rs"
