[package]
name = "producer"
version = "0.1.0"
description = "SQL to Substrait producer for GQE"
authors = ["NVIDIA"]
edition = "2021"

license = "LicenseRef-NvidiaProprietary"
readme = "README.md"

homepage = "https://confluence.nvidia.com/pages/viewpage.action?spaceKey=DevtechCompute&title=GQE"
repository = "https://gitlab-master.nvidia.com/Devtech-Compute/gqe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
datafusion = {git = "https://github.com/apache/datafusion.git", rev = "04d823b"}
datafusion-substrait = {git = "https://github.com/apache/datafusion.git", rev = "04d823b"}
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros"] }
yaml-rust = "0.4"