# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "producer"
version = "0.1.0"
description = "SQL to Substrait producer for GQE"
authors = ["NVIDIA"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"

homepage = "https://confluence.nvidia.com/pages/viewpage.action?spaceKey=DevtechCompute&title=GQE"
repository = "https://gitlab-master.nvidia.com/Devtech-Compute/gqe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
datafusion = {git = "https://github.com/apache/datafusion.git", rev = "04d823b"}
datafusion-substrait = {git = "https://github.com/apache/datafusion.git", rev = "04d823b"}
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros"] }
yaml-rust = "0.4"
